# moos-ivp-pLearn

./: .gitignore  Dockerfile  build.sh  readme.md
docs/Documentation-tex-files/: bhv_input.tex  libPython.tex  pLearn.tex
docs/Documentation-tex-files/common/: common_latex_packages.tex
docs/Reinforcement-Documentation/: common_latex_definitions.tex  common_latex_help_format.tex
docs/Reinforcement-Documentation/Documentation-tex-files/: bhv_input.tex  libPython.tex  pLearn.tex
docs/Reinforcement-Documentation/Images/: Images.pptx
pLearn/: README
pLearn/learning_code/: Constants.py  DeepLearn.py  README  baseline_evaluator.sh  clean.sh  converter.sh  evaluator.sh  log_converter.py  reinforce.py  run.sh  svn_clean.sh  tester.sh  train.sh  train_and_evaluate.sh
pLearn/learning_code/examples/Simple_Opponent_BHV/: environment.py
pLearn/learning_code/examples/Simple_Opponent_BHV/model_2/: (2, 0).h5  (2, 120).h5  (2, 180).h5  (2, 240).h5  (2, 300).h5  (2, 60).h5
pLearn/learning_code/examples/Simple_Opponent_BHV/model_3/: (2, 0).h5  (2, 120).h5  (2, 180).h5  (2, 240).h5  (2, 300).h5  (2, 60).h5
pLearn/learning_code/examples/Simple_Opponent_BHV/model_4/: (2, 0).h5  (2, 120).h5  (2, 180).h5  (2, 240).h5  (2, 300).h5  (2, 60).h5
pLearn/simulation_engine/: clean.sh  fabfile.py  launch_baseline.sh  launch_eval_model.sh  launch_model.sh  launch_reinforce.sh  launch_simulation.sh  plug_iSay.moos
pLearn/simulation_engine/m200/: .LastOpenedMOOSLogDirectory  launch_m200.sh  launch_m200_attack.sh  launch_m200_baseline.sh  launch_m200_defend.sh  launch_m200_eval.sh  launch_m200_test.sh  launch_m200_train.sh  meta_m200.bhv  meta_m200.moos  meta_m200_baseline.bhv  meta_m200_train.bhv  plug_iM200.moos  plug_pBasicContactMgr.moos  plug_pLogger.moos  python_output.csv  table.csv  targ_evan.bhv  targ_evan.moos  targ_felix.bhv  targ_felix.moos
pLearn/simulation_engine/mokai/: Alpha.jconf  launch_mokai.sh  meta_mokai.bhv  meta_mokai.moos  plug_iGPSDevice.moos  plug_iJoystick.moos  plug_iOS5000.moos  plug_pGenPath.moos  plug_pHelmIvP.moos  plug_pLogger.moos  plug_pMapValues.moos  plug_pMarinePID.moos  plug_uDialogManager.moos  plug_uProcessWatch.moos  plug_uSpeechRec.moos  plug_uTermCommand.moos
pLearn/simulation_engine/mokai/grammar/: alpha.dfa  alpha.dict  alpha.grammar  alpha.term  alpha.voca
pLearn/simulation_engine/shoreside/: .LastOpenedMOOSLogDirectory  launch_shoreside.sh  launch_shoreside_show.sh  meta_shoreside.moos  meta_shoreside_show.moos  targ_shoreside.moos
src/: CMakeLists.txt
src/lib_behaviors-test/: BHV_CollabEstimate.cpp  BHV_CollabEstimate.h  BHV_Cover.cpp  BHV_Cover.h  BHV_Defense_Multi.cpp  BHV_Defense_Multi.h  BHV_FrontEstimate.cpp  BHV_FrontEstimate.h  BHV_FrontOscillate.cpp  BHV_FrontOscillate.h  BHV_Input.cpp  BHV_Input.h  BHV_Pincer.cpp  BHV_Pincer.h  BHV_Pulse.cpp  BHV_Pulse.h  BHV_SimpleWaypoint.cpp  BHV_ZigLeg.cpp  BHV_ZigLeg.h  CMakeLists.txt  NodeReport.cpp  NodeReport.h  NodeReportDefense.cpp  NodeReportDefense.h
src/lib_python/: CMakeLists.txt  call_keras.py  python_caller.cpp  python_caller.h
src/pPointAssign/: CMakeLists.txt  Point.cpp  Point.h  PointAssign.cpp  PointAssign.h  PointAssign_Info.cpp  PointAssign_Info.h  main.cpp
